# College

./: .gitignore  .gitmodules  README.md
L2S4/ADU/: ADU-TW-2023.xls  ADU-YeuxCheveux.xls
L2S4/ADU/Orange3/: orange3.sh  requirements.txt
L2S4/ADU/TD1-TP1/: ADU-TW-2023.xls  TP1.ows
L2S4/ADU/TD2-TP2/: .TP2.ows.swp.p  TP2.ows
L2S4/ADU/TD3-TP3/: TP2.ows
L2S4/ADU/TD5-TP5/: 2025-02-11-Note-14-36.xopp  TP5.ows  Terminales.xls  Wine.xls
L2S4/ADU/TD6-TP6/: .TP6.ows.swp.p  TD6-Example.xls  TP6.ows
L2S4/ADU/TD7-TP7/: TD7.ows  TP7.ows
L2S4/CMPVDD/: TD.xopp
L2S4/CMPVDD/TP1/: TP1.m  TP1.slx
L2S4/CMPVDD/TP2-TP3/: TP2_TP3.m
L2S4/English/: 01-22-TD2.xopp  01-29-TD3.xopp  02-05-TD4.xopp  02-12-TD5.xopp
L2S4/GLQ/: TD1.xopp  TD2.xopp  TD3.xopp
L2S4/GLQ/DM2/: .env
L2S4/GLQ/DM2/Content/Diagram/: DM2.vpp
L2S4/GLQ/DM2/src/dev/pimous/biblio/: AppLauncher.java  BookCatalog.java  LibraryFacade.java  LibraryLoanManager.java  UserManager.java
L2S4/GLQ/DM3/: ControlFlow_graph_example.drawio
L2S4/GLQ/TP1/: .env
L2S4/GLQ/TP1/Content/Diagram/: Factory-VS-Wild.vpp
L2S4/GLQ/TP1/src/dev/pimous/l2s4gl/fvsw/: AppLauncher.java
L2S4/GLQ/TP1/src/dev/pimous/l2s4gl/fvsw/factory/: EntityFactory.java
L2S4/GLQ/TP1/src/dev/pimous/l2s4gl/fvsw/game/: Character.java  CharacterType.java  Entity.java  GameEventManager.java  Monster.java  MonsterType.java
L2S4/GLQ/TP1/src/dev/pimous/l2s4gl/fvsw/observer/: Observable.java  Observer.java
L2S4/GLQ/TP2/: .env
L2S4/GLQ/TP2/Content/Diagram/: Factory-VS-Wild.vpp
L2S4/GLQ/TP2/src/main/java/fr/lru/: App.java
L2S4/GLQ/TP2/src/main/java/fr/lru/decorator/monstre/: Amelioration.java  Enrage.java  PeauRenforcee.java
L2S4/GLQ/TP2/src/main/java/fr/lru/decorator/personnage/: Bouclier.java  Epee.java  Equipement.java  Potion.java
L2S4/GLQ/TP2/src/main/java/fr/lru/exception/: TypeEntiteException.java  TypePersonnageException.java
L2S4/GLQ/TP2/src/main/java/fr/lru/fabrique/: Fabrique.java
L2S4/GLQ/TP2/src/main/java/fr/lru/jeu/: Entite.java  Monstre.java  Personnage.java  TypeMonstre.java
L2S4/GLQ/TP2/src/test/java/fr/lru/: AppTest.java
L2S4/GLQ/TP3/: pom.xml
L2S4/GLQ/TP3/Content/Diagram/: Factory-VS-Wild.vpp
L2S4/GLQ/TP3/src/main/java/dev/pimous/javautils/: AutoToString.java
L2S4/GLQ/TP3/src/main/java/fr/lru/decorator/monstre/: Enrage.java  MonstreAmeliore.java  PeauRenforcee.java
L2S4/GLQ/TP3/src/main/java/fr/lru/decorator/personnage/: Bouclier.java  Epee.java  PersonnageEquipe.java  Potion.java
L2S4/GLQ/TP3/src/main/java/fr/lru/exception/: FormatInvalideException.java  TypeMonstreException.java
L2S4/GLQ/TP3/src/main/java/fr/lru/jeu/: Entite.java  GameEventManager.java  Monstre.java  Personnage.java  TypePersonnage.java
L2S4/GLQ/TP3/src/main/java/fr/lru/observer/: Observable.java  Observer.java
L2S4/GLQ/TP3/src/main/java/fr/lru/strategy/: AttaqueDistante.java  AttaqueMelee.java  AttaqueNormale.java  MonstreStrategie.java
L2S4/GLQ/TP3/src/main/resources/: characters_and_monsters.txt
L2S4/GLQ/TP3/src/test/java/fr/lru/: StrategieTest.java
L2S4/PIA/TP1/: CMakeLists.txt
L2S4/PIA/TP1/array/: CMakeLists.txt
L2S4/PIA/TP1/array/src/: array.c  array.h  array.inc.h
L2S4/PIA/TP1/array/test/: create.c  get.c  init.c  set.c
L2S4/PIA/TP2/array/src/: array.inc.h
L2S4/PIA/TP2/array/test/: append.c  calculateMax.c  create.c  getters.c  insert.c  prepend.c  remove.c  set.c  toString.c
L2S4/PIA/TP3/array/src/: array.c  array.h  list.c  list.h
L2S4/PIA/TP3/array/test.old/array/: calculateMax.c  getters.c  init.c  insert.c  prepend.c  remove.c  set.c
L2S4/PIA/TP3/array/test.old/iter/: create.c  next.c  rewind.c
L2S4/PIA/TP3/array/test/list/: append.c  concat.c  index.c  length.c  nth.c  prepend.c
L2S4/PIA/TP4/: CMakeLists.txt
L2S4/PIA/TP4/array/: CMakeLists.txt
L2S4/PIA/TP4/array/src/: list.c  list.h  list.inc.h
L2S4/PIA/TP4/array/test.old/array/: append.c  create.c  toString.c
L2S4/PIA/TP4/array/test.old/iter/: getters.c
L2S4/PIA/TP4/array/test/list/: append.c  clone.c  concat.c  index.c  init.c  insertAfter.c  insertBefore.c  insertNTH.c  length.c  nth.c  prepend.c  removeData.c  removeNTH.c  reverse.c  sort.c
L2S4/POA/: TD1.xopp
L2S4/RI/: TD1.xopp  TD2.xopp
L2S4/RI/TP1/: .env
L2S4/RI/TP1/src/dev/pimous/l2s4ri/tp1/: Exercice1.java  Exercice2.java  Exercice3.java  Launcher.java
L2S4/RI/TP1/src/dev/pimous/l2s4ri/tp1/ex2/: ReaderWorker.java  WriterWorker.java
L2S4/SEA/TP1/: CMakeLists.txt
L2S4/SEA/TP1/fork/: CMakeLists.txt
L2S4/SEA/TP1/fork/src/: compte_arg.c  double_fork.c  execl.c  execlp.c  execv.c  execvp.c  fork.c  fork_loop.c  hello.c  zombie1.c  zombie2.c
L2S4/SEA/TP2/: CMakeLists.txt
L2S4/SEA/TP2/exec/: CMakeLists.txt
L2S4/SEA/TP2/exec/src/: async.c  cp.c  forkexec.c  mycat.c  pair.c  partage_pere_fils_std_systeme.c  sync.c
L2S4/SEA/TP3/: CMakeLists.txt
L2S4/SEA/TP3/pipe/: CMakeLists.txt
L2S4/SEA/TP3/pipe/src/: pfe.c  pipe.c
L2S4/SEA/TP3/signal/: CMakeLists.txt
L2S4/SEA/TP3/signal/src/: sig_chld.c  sig_chld1.c  sig_chld2.c  sig_hup.c  signals.c  sync.c
L2S4/SEA/TP4/: CMakeLists.txt
L2S4/SEA/TP4/ring/: CMakeLists.txt
L2S4/SEA/TP4/ring/src/: ring.c
L2S4/SEA/TP5/: CMakeLists.txt
L2S4/SEA/TP5/thread/: CMakeLists.txt
L2S4/SEA/TP5/thread/src/: n_threads.c  threads_100.c  threads_pi.c
L2S4/SEA/TP6/: CMakeLists.txt
L2S4/SEA/TP6/sem/: CMakeLists.txt
L2S4/SEA/TP6/sem/src/: dentiste0.c  dentiste1.c  mt_mergesort.c
